@@ -1,8 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.24.1'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
@@ -32,11 +30,6 @@ application {
     mainClass = 'net.edubovit.labyrinth.LabyrinthApiApplication'
 }
 
-javafx {
-    version = '18.0.1'
-    modules = ['javafx.controls', 'javafx.swing']
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -45,19 +38,6 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-}
-
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'labyrinth'
-        jvmArgs += '--enable-preview'
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
 }
 
 tasks.withType(JavaCompile) {
